syntax = "proto3";
package peer;

message Clock {
  uint32 sender_id = 1;
  uint64 timestamp = 2;
}

message Message {
  Clock clock = 1;
  string content = 2;
}

enum RequestStatusEnum {
  SUCCESSFUL = 0;
  DECLARED_MALICIOUS = 1;
}

message RequestStatus {
  RequestStatusEnum v = 1;
}

service PeerService {
  rpc SendMessage(Message) returns (RequestStatus);
}
